# solve-the-puzzler

./: .gitignore  CMakeLists.txt  Pipfile  README.md  conanfile.txt
cpp/src/: CMakeLists.txt
cpp/src/examples/: CMakeLists.txt
cpp/src/examples/ACM_1986_Challenge/: CMakeLists.txt  SolveChallengeWithRanges.cpp  SolveChallengeWithStd.cpp  SomeTextFile.txt  common.hpp  easyTextFile.txt  solveTheChallenge.sh
cpp/src/examples/CurryingFunctions/: CMakeLists.txt  CurryingComplexExample.cpp  CurryingExample.cpp  CurryingExamples.hpp  CurryingSimpleExample.cpp  OnlineData.hpp
cpp/src/puzzlers/2020-12-20_BuenosAires/: BuenosAires.cpp  CMakeLists.txt
cpp/src/puzzlers/2020-12-27_Palindrome/: ProblemStatement.txt
datasets/: US_State_Neighbors.txt  atomic_elements.txt  imdbActors.tsv
python/puzzlers/2021-01-17_landmarks_elements_states/: ProblemStatement.txt  Solution.py  landmarks_elems_states.py
python/puzzlers/2021-01-24_threeSyllableChild/: ProblemStatement.txt  three_letters.py
python/puzzlers/2021-01-31_four_states_to_word/: ProblemStatement.txt  four_state_word.py
python/puzzlers/2021-02-14_actor_bible_anagram/: ProblemStatement.txt  actor_bible_anagram.py
python/util/: utilities.py
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  util.cpp
src/lib/include/: util.hpp
src/puzzlers/: CMakeLists.txt
src/puzzlers/2020-12-20_BuenosAires/: BuenosAires.cpp  BuenosAires.hpp  CMakeLists.txt  ProblemStatement.txt
src/puzzlers/2020-12-27_Palindrome/: CMakeLists.txt  ProblemStatement.txt  SevenLetterPalindrome.cpp  SevenLetterPalindrome.hpp
